solve the overlapping and allignment issue

--- a/src/aboutus-page-components/AboutUsHeroSewction/AboutUsHeroSection.css
+++ b/src/aboutus-page-components/AboutUsHeroSewction/AboutUsHeroSection.css
@@ -1,5 +1,5 @@
 .about-us-hero-wrapper{ 
-    height: 100vh;
+    /* height: 100vh;   this was the problem */
 }
 
 
