--- a/src/aboutus-page-components/Quotation/Quotation.css
+++ b/src/aboutus-page-components/Quotation/Quotation.css
@@ -1,5 +1,5 @@
 .quote-comp-wrapper{ 
-    height: 100vh;
+    /* height: 100vh; */
     width: 100%;
 
 }   
