--- a/src/common-components/TempComponenet/TempComponent.css
+++ b/src/common-components/TempComponenet/TempComponent.css
@@ -1,5 +1,5 @@
 .temp-comp-wrapper{ 
-    height: 100vh;
+    /* height: 100vh;  this was the problem  */
     width: 100%;
 
 }   
